# qamp2025

./: .gitignore  Makefile  README.md  mypy.ini  pyproject.toml
.github/workflows/: continuos-integration.yml
configs/backends/: README.md  example_sim.yaml
configs/datasets/: README.md  molecular.yaml  synth.yaml  third.yaml
configs/runs/: README.md  smoke.yaml
docs/: ROADMAP.md
qamp/: __init__.py
qamp/backends/: README.md  __init__.py
qamp/classical/: __init__.py  gnn_baselines.py  ullmann.py  vf2.py  wl_kernel.py
qamp/contracts/: APIs.md  ConfigSpec.md  DataFormats.md
qamp/data/: DatasetBuilder.ipynb  DatasetCleaning.py  __init__.py  checks.py  io.py  loaders.py  synth_gen.py
qamp/data/datacards/: README.md  TEMPLATE.md  mutag_subset.md  snap_small.md
qamp/data/molecular/: mutag_benchmark.pkl  mutag_graphs.pkl
qamp/data/snap/: README.md  snap_benchmark.pkl  snap_graphs.pkl
qamp/data/snap/raw/: SNAP_A.txt  SNAP_edge_attributes.txt  SNAP_node_labels.txt
qamp/data/social/: meta.yaml  splits.yaml
qamp/data/synth/ba/: ba_benchmark.pkl  ba_graphs.pkl
qamp/data/synth/er/: er_benchmark.pkl  er_graphs.pkl
qamp/eval/: __init__.py  configs.py  logging.py  logging_schema.json  metrics.py  plots.py  tables.py
qamp/quantum/: __init__.py  encoding.py  entanglement.py  qaoa_gi.py  qgnn.py  qkernel.py
qamp/runners/: run_baselines.py  validate_dataset.py
qamp/rust_ext/: README.md
results/: .gitignore
