[project]
name = "qamp-graph-matching"
version = "202511190926"
description = "Scaffold for a resource-aware quantum graph matching benchmark."
readme = "README.md"
requires-python = ">=3.11"
authors = [{ name = "Your Name" }]

# Default deps tailored for Google Colab.
dependencies = [
  "qiskit",
  "qiskit-aer",
  "numpy",
  "scipy",
  "networkx",
  "requests",
  "pandas",
  "pyyaml",
  "jsonschema",
  "tqdm",
  "datasets",

  # Colab-friendly pins (CPU)
  "torch==2.8.0",
  "torchvision==0.23.0",
  "torchaudio==2.8.0",

  # Include PyTorch Geometric core packages
  "torch-scatter",
  "torch-sparse",
  "torch-cluster",
  "torch-spline-conv",
  "torch-geometric",

  # Satisfy IPython 7.x on Colab
  "jedi>=0.16",
]

# Developer tools (local + CI)
[project.optional-dependencies]
dev = [
  "mypy",
  "pytest",
  "types-PyYAML",
  "types-networkx",
  "types-tqdm",
  "types-requests",
  "datasets",
  "numpy",
  "maturin"
]

[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

# Ensure we package only qamp/ (not results/, configs/, notebooks/)
[tool.setuptools.packages.find]
include = ["qamp", "qamp.*"]
exclude = ["results*", "configs*", "notebooks*"]

[tool.mypy]
python_version = "3.11"
warn_return_any = true
warn_unused_configs = true
